# pasty

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: base.css
frontend/src/components/: Navbar.vue  NewPaste.vue  PasteList.vue
migrations/2024-07-19-082606_create_pastes/: down.sql  up.sql
scripts/: clean-db.sh  create-paste.sh
src/: main.rs  models.rs  schema.rs
