[package]
name = "pasty"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.1", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
